Changes to Version 2.0-1

  o Caching of variable names, factor names, etc., to improve menu refreshes in large data sets (in response to observation of Yoshinobu Kanda).

  o Updated translations (with thanks to the translators): Japanese (Araki Takaharu).

  o Most errors now removed from R Markdown and knitr documents.

  o New editor for R Markdown and knitr documents.

  o Small bug fixes.

Changes to Version 2.0-0

  o New package co-author: Milan Bouchet-Valat. 

  o Many changes to style of dialogs: tabs, Reset button, Apply button, small interface improvements.

  o Support for R Markdown, with script and Rmd tabs.

  o Expanded Options dialog and new Save Options dialog.

  o Better handling of default fonts.

  o Improved probability plots. 

  o Introduced plotDistr(), lineplot(), indexplot() convenience functions.

  o New nonparametric density estimate dialog.

  o Use automatic point identification as default in plot dialogs.

  o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).

  o Partial correlations now optionally report pairwise p-values (suggestion of Aaron Swink).

  o Removed Sciviews support code.

  o Small fixes.

  o Updated translations (with thanks to the translators): Italian (Stefano Calza), Korean (Jong-Hwa Shin), Romanian (Adrian Dusa), Russian (Alexey Shipunov), Spanish (Manuel Munoz-Marquez).

  o Show menu item for English introductory manual even if a "translation" is available (suggestion of Manuel Munoz-Marquez).

Changes to Version 1.9-5

  o R logo now replaces Tk logo on non-Windows as well as Windows platforms (with help of Milan Bouchet-Valet).

  o Faster opening of dialog windows under Windows (consequence of above).

  o Fix for Mac OS X bug in auto-load of missing dependencies on initial start-up (reported by Pablo Serrano).

Changes to Version 1.9-4
