@@ -8,6 +8,8 @@ Changes to Version 2.0-1
 
   o New editor for R Markdown and knitr documents.
 
+  o Stem-and-leaf dialog now supports back-to-back display.
+
   o Small bug fixes.
 
 Changes to Version 2.0-0
